# aiogram_job_jobbot_freelance

./: .env-template  .gitignore  app.py  config.py  database.py  docker-compose.yaml  downloader.py  logger.py  models.py  parser.py  pyproject.toml  readme.md  readme.txt  search_engine.py  tg_bot.py
jobbot_v1.0/: app.py  database.py  downloader.py  parser.py  pyproject.toml  search_engine.py
jobbot_v1.0.1a/: Makefile  docker-compose.yaml  readme.md
jobbot_v1.0.1a/services/bot/: Makefile  main.readme.md  pyproject.toml
jobbot_v1.0.1a/services/bot/src/: main.py
jobbot_v1.0.1a/services/scheduler/: readme.md
jobbot_v1.0.1a/services/scrapper/: readme.md
jobbot_v1.0.1a/services/search_engine/: dockerfile  readme.md
jobbot_v1.0.1a/src/: .dockerignore
jobbot_v1.0/tg_bot_backend/: keyboards.py
scrapper/: app.py  downloader.py  models.py  parser.py
tg_bot_backend/: handlers.py  keyboards.py  lexicon.py
