[tool.poetry]
name = "jubbot-multy"
version = "0.1.0"
description = ""
authors = ["Andrey C <achizhovjob@yandex.ru>"]
readme = "README.md"
packages = [{include = "jubbot_multy"}]

[tool.poetry.dependencies]
python = "^3.11"
dateparser = "^1.2.0"
loguru = "^0.7.2"
aiohttp = "^3.9.1"
selenium = "^4.15.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
aiogram = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
