[tool.poetry]
name = "jobbot-chiz"
version = "1.0.1a"
description = "Bot for geting Notifications of freelance tasks"
authors = ["Andrey Chiz <achizhovjob@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.5.0"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
dark = "^0.7.1"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
setting = { package-mode = false }
